# minigames

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c
src/: main.c  minesweeper.c  minesweeper.h  snake.c  snake.h  tetris.c  tetris.h  tui.c  tui.h
